file put to accept binary files (#10)